# sucrack

./: COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
doc/: sucrack.1
src/: Makefile.am  Makefile.in  dictionary.c  dictionary.h  pty.c  pty.h  rewriter.c  rewriter.h  rules.c  rules.h  stat.c  stat.h  su.c  su.h  sucrack.c  sucrack.h  util.c  util.h  worker.c  worker.h
